@@ -11,6 +11,7 @@
 		* RokonActivity.setGameSize(width, height, force) Can force width/height to remain as given, setGameSize(width, height) now assumes fixed aspect and adjusts
 		* Scene has a couple of abstract methods that must be overriden, onReady onResume onPause
 		* Vibrator now has an enable() and disable(), to prevent the phone from being vibrated. The default state, is enabled
+		* Functionality to load inside a RelativeLayout - to enable a top layer of Views, createEngine(true), then getInterface() for the top RelativeLayout
 	
 	Changes
 		* DrawableObject.isOnScreen() returns FALSE if it is not added to a Layer
@@ -23,6 +24,7 @@
 		* Point.getY() returned wrong value if it had a parent
 		* DrawableObjet.setSize did not modify height
 		* TextSprite was being silly, and was looking for FontTexture intead of TextTexture
+		* TextSprite NullPointerException fixed when no text given and drawing in PRIORITY_NORMAL
 		* PhysicalSprite did not take into account current rotaton when creating its Body 
 		* TextureAtlas was overlapping inserted Textures
 		* Touchables are now checked against their rotated position, previously rotation wasn't considered
